@@ -1,33 +1,26 @@
 package it.pagopa.pn.national.registries.converter;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import it.pagopa.pn.national.registries.constant.*;
+import it.pagopa.pn.national.registries.constant.DigitalAddressRecipientType;
+import it.pagopa.pn.national.registries.constant.DigitalAddressType;
+import it.pagopa.pn.national.registries.constant.DomicileType;
+import it.pagopa.pn.national.registries.constant.RecipientType;
 import it.pagopa.pn.national.registries.entity.BatchRequest;
-import it.pagopa.pn.national.registries.exceptions.DigitalAddressException;
 import it.pagopa.pn.national.registries.exceptions.PnNationalRegistriesException;
 import it.pagopa.pn.national.registries.generated.openapi.server.v1.dto.*;
+import it.pagopa.pn.national.registries.middleware.queue.consumer.event.PnAddressGatewayEvent;
 import it.pagopa.pn.national.registries.model.CodeSqsDto;
+import it.pagopa.pn.national.registries.model.InternalCodeSqsDto;
 import it.pagopa.pn.national.registries.model.gateway.AddressQueryRequest;
-import it.pagopa.pn.national.registries.model.gateway.GatewayAddressResponse;
 import it.pagopa.pn.national.registries.model.gateway.GatewayDownstreamService;
-import it.pagopa.pn.national.registries.model.inad.InadResponseKO;
-import it.pagopa.pn.national.registries.model.inipec.DigitalAddress;
-import it.pagopa.pn.national.registries.model.inipec.PhysicalAddress;
-import it.pagopa.pn.national.registries.utils.CheckEmailUtils;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.util.CollectionUtils;
 import org.springframework.util.StringUtils;
-import reactor.core.publisher.Mono;
 
-import java.nio.charset.Charset;
 import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
 import java.util.Collections;
 import java.util.List;
-import java.util.Objects;
 import java.util.regex.Pattern;
 
 @Slf4j
@@ -40,9 +33,6 @@ public class GatewayConverter {
     private static final String DATE_PATTERN = "yyyy-MM-dd";
     private static final String CF_NOT_FOUND = "CF non trovato";
 
-    @Autowired
-    private ObjectMapper mapper;
-
     protected AddressOKDto mapToAddressesOKDto(String correlationId) {
         AddressOKDto dto = new AddressOKDto();
         dto.setCorrelationId(correlationId);
@@ -50,9 +40,9 @@ public class GatewayConverter {
     }
 
     protected CodeSqsDto anprToSqsDto(String correlationId, GetAddressANPROKDto anprResponse) {
-        CodeSqsDto codeSqsDto = newCodeSqsDto(correlationId);
+        CodeSqsDto codeSqsDto = newCodeSqsDto(correlationId, GatewayDownstreamService.ANPR);
         if (anprResponse != null && !CollectionUtils.isEmpty(anprResponse.getResidentialAddresses())) {
-            codeSqsDto.setPhysicalAddress(convertAnprToPhysicalAddress(anprResponse.getResidentialAddresses().get(0)));
+            codeSqsDto.setPhysicalAddress(convertAnprToPhysicalAddress(anprResponse.getResidentialAddresses().getFirst()));
         } else {
             log.info("correlationId: {} - ANPR - indirizzi non presenti", correlationId);
             // il physicalAddress rimane null, sarà compito di chi serializzerà il JSON occuparsi d'includere il campo
@@ -70,14 +60,14 @@ public class GatewayConverter {
                 && ANPR_CF_NOT_FOUND.matcher(exception.getResponseBodyAsString()).find()) {
             log.info("correlationId: {} - ANPR - CF non trovato", correlationId);
             // il physicalAddress rimane null, sarà compito di chi serializzerà il JSON occuparsi d'includere il campo
-            codeSqsDto = newCodeSqsDto(correlationId);
+            codeSqsDto = newCodeSqsDto(correlationId, GatewayDownstreamService.ANPR);
             codeSqsDto.setAddressType(AddressRequestBodyFilterDto.DomicileTypeEnum.PHYSICAL.getValue());
         }
         return codeSqsDto;
     }
 
     protected CodeSqsDto inadToSqsDto(String correlationId, GetDigitalAddressINADOKDto inadDto, DigitalAddressRecipientType digitalAddressRecipientType) {
-        CodeSqsDto codeSqsDto = newCodeSqsDto(correlationId);
+        CodeSqsDto codeSqsDto = newCodeSqsDto(correlationId, GatewayDownstreamService.INAD);
         if (inadDto != null && inadDto.getDigitalAddress() != null) {
             codeSqsDto.setDigitalAddress(List.of(convertInadToDigitalAddress(inadDto.getDigitalAddress(), digitalAddressRecipientType)));
         } else {
@@ -97,7 +87,7 @@ public class GatewayConverter {
                 && INAD_CF_NOT_FOUND.matcher(exception.getResponseBodyAsString()).find())
         || CF_NOT_FOUND.equalsIgnoreCase(exception.getMessage()))) {
             log.info("correlationId: {} - INAD - CF non trovato", correlationId);
-            codeSqsDto = newCodeSqsDto(correlationId);
+            codeSqsDto = newCodeSqsDto(correlationId,GatewayDownstreamService.INAD);
             codeSqsDto.setDigitalAddress(Collections.emptyList());
             codeSqsDto.setAddressType(AddressRequestBodyFilterDto.DomicileTypeEnum.DIGITAL.getValue());
         }
@@ -105,7 +95,7 @@ public class GatewayConverter {
     }
 
     protected CodeSqsDto regImpToSqsDto(String correlationId, GetAddressRegistroImpreseOKDto registroImpreseDto) {
-        CodeSqsDto codeSqsDto = newCodeSqsDto(correlationId);
+        CodeSqsDto codeSqsDto = newCodeSqsDto(correlationId, GatewayDownstreamService.REGISTRO_IMPRESE);
         if (registroImpreseDto != null && registroImpreseDto.getProfessionalAddress() != null) {
             codeSqsDto.setPhysicalAddress(convertRegImpToPhysicalAddress(registroImpreseDto.getProfessionalAddress()));
         } else {
@@ -117,7 +107,7 @@ public class GatewayConverter {
     }
 
     protected CodeSqsDto ipaToSqsDto(String correlationId, IPAPecDto ipaResponse) {
-        CodeSqsDto codeSqsDto = newCodeSqsDto(correlationId);
+        CodeSqsDto codeSqsDto = newCodeSqsDto(correlationId, GatewayDownstreamService.IPA);
         if (ipaResponse != null && ipaResponse.getDomicilioDigitale() != null) {
             codeSqsDto.setDigitalAddress(List.of(convertIpaPecToDigitalAddress(ipaResponse)));
         } else {
@@ -127,28 +117,23 @@ public class GatewayConverter {
         return codeSqsDto;
     }
 
-    private DigitalAddress convertIpaPecToDigitalAddress(IPAPecDto domicilioDigitale) {
-        return new DigitalAddress(DigitalAddressType.PEC.getValue(),
-                domicilioDigitale.getDomicilioDigitale(),
-                DigitalAddressRecipientType.IMPRESA.getValue());
-
+    private AddressSQSMessageDigitalAddressInnerDto convertIpaPecToDigitalAddress(IPAPecDto domicilioDigitale) {
+        AddressSQSMessageDigitalAddressInnerDto digitalAddress = new AddressSQSMessageDigitalAddressInnerDto();
+        digitalAddress.setAddress(domicilioDigitale.getDomicilioDigitale());
+        digitalAddress.setRecipient(AddressSQSMessageDigitalAddressInnerDto.RecipientEnum.fromValue(DigitalAddressRecipientType.IMPRESA.getValue()));
+        digitalAddress.setType(DigitalAddressType.PEC.getValue());
+        return digitalAddress;
     }
 
-    protected CodeSqsDto errorRegImpToSqsDto(String correlationId, Throwable error) {
-        CodeSqsDto codeSqsDto = newCodeSqsDto(correlationId);
-        codeSqsDto.setError(error.getMessage());
-        codeSqsDto.setAddressType(AddressRequestBodyFilterDto.DomicileTypeEnum.PHYSICAL.getValue());
-        return codeSqsDto;
-    }
-
-    protected CodeSqsDto newCodeSqsDto(String correlationId) {
+    protected CodeSqsDto newCodeSqsDto(String correlationId, GatewayDownstreamService addressSourceEnum) {
         CodeSqsDto codeSqsDto = new CodeSqsDto();
         codeSqsDto.setCorrelationId(correlationId);
+        codeSqsDto.setRegistry(addressSourceEnum.name());
         return codeSqsDto;
     }
 
-    protected PhysicalAddress convertAnprToPhysicalAddress(ResidentialAddressDto residenceDto) {
-        PhysicalAddress physicalAddress = new PhysicalAddress();
+    protected PhysicalAddressDto convertAnprToPhysicalAddress(ResidentialAddressDto residenceDto) {
+        PhysicalAddressDto physicalAddress = new PhysicalAddressDto();
         physicalAddress.setAddress(residenceDto.getAddress());
         physicalAddress.setAddressDetails(residenceDto.getAddressDetail());
         physicalAddress.setAt(residenceDto.getAt());
@@ -161,12 +146,16 @@ public class GatewayConverter {
         return physicalAddress;
     }
 
-    protected DigitalAddress convertInadToDigitalAddress(DigitalAddressDto digitalAddressDto, DigitalAddressRecipientType digitalAddressRecipientType) {
-        return new DigitalAddress(DigitalAddressType.PEC.getValue(), digitalAddressDto.getDigitalAddress(), digitalAddressRecipientType.getValue());
+    protected AddressSQSMessageDigitalAddressInnerDto convertInadToDigitalAddress(DigitalAddressDto digitalAddressDto, DigitalAddressRecipientType digitalAddressRecipientType) {
+        AddressSQSMessageDigitalAddressInnerDto digitalAddress = new AddressSQSMessageDigitalAddressInnerDto();
+        digitalAddress.setAddress(digitalAddressDto.getDigitalAddress());
+        digitalAddress.setRecipient(AddressSQSMessageDigitalAddressInnerDto.RecipientEnum.fromValue(digitalAddressRecipientType.getValue()));
+        digitalAddress.setType(DigitalAddressType.PEC.getValue());
+        return digitalAddress;
     }
 
-    protected PhysicalAddress convertRegImpToPhysicalAddress(GetAddressRegistroImpreseOKProfessionalAddressDto addressDto) {
-        PhysicalAddress physicalAddress = new PhysicalAddress();
+    protected PhysicalAddressDto convertRegImpToPhysicalAddress(GetAddressRegistroImpreseOKProfessionalAddressDto addressDto) {
+        PhysicalAddressDto physicalAddress = new PhysicalAddressDto();
         physicalAddress.setProvince(addressDto.getProvince());
         physicalAddress.setAddress(addressDto.getAddress());
         physicalAddress.setMunicipality(addressDto.getMunicipality());
@@ -240,30 +229,6 @@ public class GatewayConverter {
         return dto;
     }
 
-    protected IPARequestBodyDto convertToGetIpaPecRequest(BatchRequest batchRequest) {
-        IPARequestBodyDto dto = new IPARequestBodyDto();
-        CheckTaxIdRequestBodyFilterDto filterDto = new CheckTaxIdRequestBodyFilterDto();
-        filterDto.setTaxId(batchRequest.getCf());
-        dto.setFilter(filterDto);
-        return dto;
-    }
-
-    public String convertCodeSqsDtoToString(CodeSqsDto codeSqsDto) {
-        try {
-            return mapper.writeValueAsString(codeSqsDto);
-        } catch (JsonProcessingException e) {
-            throw new DigitalAddressException("can not convert SQS DTO to String", e);
-        }
-    }
-
-    protected Mono<GetDigitalAddressINADOKDto> emailValidation(GetDigitalAddressINADOKDto inadResponse) {
-        if (!CheckEmailUtils.isValidEmail(inadResponse.getDigitalAddress().getDigitalAddress())) {
-            return Mono.error(new PnNationalRegistriesException(CF_NOT_FOUND, HttpStatus.NOT_FOUND.value(),
-                    HttpStatus.NOT_FOUND.getReasonPhrase(), null, null, Charset.defaultCharset(), InadResponseKO.class));
-        }
-        return Mono.just(inadResponse);
-    }
-
     // START METHODS FOR MULTI ADDRESSES
     protected List<AddressQueryRequest> toAddressQueryRequests(PhysicalAddressesRequestBodyDto requestBodyDto) {
         return requestBodyDto.getAddresses().stream()
@@ -291,24 +256,24 @@ public class GatewayConverter {
         return dto;
     }
 
-    protected GatewayAddressResponse.AddressInfo convertAnprResponseToInternalRecipientAddress(GetAddressANPROKDto response, AddressQueryRequest addressQueryRequest) {
-        GatewayAddressResponse.AddressInfo addressInfo = new GatewayAddressResponse.AddressInfo();
+    protected PhysicalAddressResponseDto convertAnprResponseToInternalRecipientAddress(GetAddressANPROKDto response, AddressQueryRequest addressQueryRequest) {
+        PhysicalAddressResponseDto addressResponseDto = new PhysicalAddressResponseDto();
         if (response != null && !CollectionUtils.isEmpty(response.getResidentialAddresses())) {
-            addressInfo.setPhysicalAddress(convertAnprToPhysicalAddress(response.getResidentialAddresses().get(0)));
+            addressResponseDto.setPhysicalAddress(convertAnprToPhysicalAddress(response.getResidentialAddresses().getFirst()));
         } else {
             log.info("correlationId: {} recIndex: {} - ANPR - indirizzi non presenti", addressQueryRequest.getCorrelationId(), addressQueryRequest.getRecIndex());
             // il physicalAddress rimane null, sarà compito di chi serializzerà il JSON occuparsi d'includere il campo
         }
-        addressInfo.setRecIndex(addressQueryRequest.getRecIndex());
-        addressInfo.setRegistry(GatewayDownstreamService.ANPR.name());
-        return addressInfo;
+        addressResponseDto.setRecIndex(addressQueryRequest.getRecIndex());
+        addressResponseDto.setRegistry(GatewayDownstreamService.ANPR.name());
+        return addressResponseDto;
     }
 
-    protected GatewayAddressResponse.AddressInfo anprNotFoundErrorToPhysicalAddressSQSMessage(AddressQueryRequest addressQueryRequest) {
-        GatewayAddressResponse.AddressInfo addressInfo = new GatewayAddressResponse.AddressInfo();
-        addressInfo.setRecIndex(addressQueryRequest.getRecIndex());
-        addressInfo.setRegistry(GatewayDownstreamService.ANPR.name());
-        return addressInfo;
+    protected PhysicalAddressResponseDto anprNotFoundErrorToPhysicalAddressSQSMessage(AddressQueryRequest addressQueryRequest) {
+        PhysicalAddressResponseDto addressResponseDto = new PhysicalAddressResponseDto();
+        addressResponseDto.setRecIndex(addressQueryRequest.getRecIndex());
+        addressResponseDto.setRegistry(GatewayDownstreamService.ANPR.name());
+        return addressResponseDto;
     }
 
     protected GetAddressRegistroImpreseRequestBodyDto convertToGetAddressRegistroImpreseRequest(AddressQueryRequest addressQueryRequest) {
@@ -321,8 +286,8 @@ public class GatewayConverter {
         return dto;
     }
 
-    protected GatewayAddressResponse.AddressInfo convertRegImprResponseToInternalRecipientAddress(GetAddressRegistroImpreseOKDto response, AddressQueryRequest addressQueryRequest) {
-        GatewayAddressResponse.AddressInfo addressInfo = new GatewayAddressResponse.AddressInfo();
+    protected PhysicalAddressResponseDto convertRegImprResponseToInternalRecipientAddress(GetAddressRegistroImpreseOKDto response, AddressQueryRequest addressQueryRequest) {
+        PhysicalAddressResponseDto addressInfo = new PhysicalAddressResponseDto();
         if (response != null && response.getProfessionalAddress() != null) {
             addressInfo.setPhysicalAddress(convertRegImpToPhysicalAddress(response.getProfessionalAddress()));
         } else {
@@ -334,43 +299,41 @@ public class GatewayConverter {
         return addressInfo;
     }
 
-    protected PhysicalAddressesResponseDto convertToPhysicalAddressesResponseDto(List<GatewayAddressResponse.AddressInfo> addressResponse, String correlationId) {
+    protected PhysicalAddressesResponseDto convertToPhysicalAddressesResponseDto(List<PhysicalAddressResponseDto> addressResponse, String correlationId) {
         PhysicalAddressesResponseDto response = new PhysicalAddressesResponseDto();
         response.setCorrelationId(correlationId);
-        response.setAddresses(toPhysicalAddressResponseDto(addressResponse));
+        response.setAddresses(addressResponse);
         return response;
     }
 
-    private List<PhysicalAddressResponseDto> toPhysicalAddressResponseDto(List<GatewayAddressResponse.AddressInfo> addressResponse) {
-        return addressResponse.stream()
-                .map(res -> {
-                    PhysicalAddressResponseDto addressResponseDto = new PhysicalAddressResponseDto();
-                    addressResponseDto.setPhysicalAddress(toPhysicalAddressDto(res.getPhysicalAddress()));
-                    addressResponseDto.setRecIndex(res.getRecIndex());
-                    addressResponseDto.setRegistry(res.getRegistry());
-                    addressResponseDto.setError(res.getError() != null ? res.getError().name() : null);
-                    addressResponseDto.setErrorStatus(res.getErrorStatus() != null ? res.getErrorStatus().value() : null);
-                    return  addressResponseDto;
-                })
-                .toList();
-    }
-
-    private PhysicalAddressDto toPhysicalAddressDto(PhysicalAddress physicalAddress) {
-        if(Objects.isNull(physicalAddress)) {
-            return null;
-        }
-
-        PhysicalAddressDto addressDto = new PhysicalAddressDto();
-        addressDto.setAddress(physicalAddress.getAddress());
-        addressDto.setAddressDetails(physicalAddress.getAddressDetails());
-        addressDto.setAt(physicalAddress.getAt());
-        addressDto.setZip(physicalAddress.getZip());
-        addressDto.setMunicipality(physicalAddress.getMunicipality());
-        addressDto.setMunicipalityDetails(physicalAddress.getMunicipalityDetails());
-        addressDto.setProvince(physicalAddress.getProvince());
-        addressDto.setForeignState(physicalAddress.getForeignState());
-        return addressDto;
-    }
     // END METHODS FOR MULTI ADDRESSES
 
+    protected AddressRequestBodyDto toAddressRequestBodyDto(PnAddressGatewayEvent.Payload payload) {
+        AddressRequestBodyDto addressRequestBodyDto = new AddressRequestBodyDto();
+        AddressRequestBodyFilterDto addressRequestBodyFilterDto = new AddressRequestBodyFilterDto();
+        addressRequestBodyFilterDto.setCorrelationId(payload.getCorrelationId());
+        addressRequestBodyFilterDto.setReferenceRequestDate(payload.getReferenceRequestDate());
+        addressRequestBodyFilterDto.setDomicileType(AddressRequestBodyFilterDto.DomicileTypeEnum.fromValue(payload.getDomicileType()));
+        addressRequestBodyFilterDto.setTaxId(payload.getTaxId());
+        addressRequestBodyDto.setFilter(addressRequestBodyFilterDto);
+        return addressRequestBodyDto;
+    }
+
+    protected CodeSqsDto emptyDigitalCodeSqsDto(String correlationId) {
+        var codeSqsDto = newCodeSqsDto(correlationId, GatewayDownstreamService.INAD);
+        codeSqsDto.setDigitalAddress(Collections.emptyList());
+        codeSqsDto.setAddressType(AddressRequestBodyFilterDto.DomicileTypeEnum.DIGITAL.getValue());
+        return codeSqsDto;
+    }
+
+    protected InternalCodeSqsDto toInternalCodeSqsDto(AddressRequestBodyFilterDto filter, String recipientType, String pnNationalRegistriesCxId) {
+        return InternalCodeSqsDto.builder()
+                .taxId(filter.getTaxId())
+                .correlationId(filter.getCorrelationId())
+                .recipientType(recipientType)
+                .domicileType(filter.getDomicileType().getValue())
+                .referenceRequestDate(filter.getReferenceRequestDate())
+                .pnNationalRegistriesCxId(pnNationalRegistriesCxId)
+                .build();
+    }
 }
